--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 packaging==24.1
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
 pytz==2024.2
 PyYAML==6.0.2
